--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "autoprefixer": "^9.8.6",
+    "firebase": "^8.6.5",
     "leaflet": "^1.7.1",
     "postcss": "^7.0.35",
     "react": "^17.0.2",
